--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         
         <section class="h2-pics">
             <div class="container">
-                <h2 class="h2-what">Чем мы занимаемся</h2>
+                <h2 class="h2-container-name">Чем мы занимаемся</h2>
                 <ul class="what-img list">
                     <li><img src="./images/main-page-img/typingman.jpg" alt="человек печатает на клавиатуре" width="370" height="294"></li>
                     <li><img src="./images/main-page-img/manphone.jpg" alt="человек смотрит в телефон" width="370" height="294"></li>
@@ -96,7 +96,7 @@
 
         <section class="our-team-background section">
             <div class="container">
-                <h2 class="our-team-h2" >Наша команда</h2>
+                <h2 class="h2-container-name" >Наша команда</h2>
                 <ul class="our-team list">
                     <li>
                         <img
@@ -253,6 +253,61 @@
                                 </a>
                             </li>
                         </ul>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <section class="section">
+            <div class="container">
+                <h2 class="h2-container-name">Постоянные клиенты</h2>
+                <ul class="regular-customers-items list">
+                    <li class="regular-customer-item">
+                        <a class="regular-customer-link" href="">
+                            <svg class="regular-customer-icon">
+                                <use href="./images/sprite.svg#icon-company1-svg"></use>
+                            </svg>
+                        </a>
+                    </li>
+
+                    <li class="regular-customer-item">
+                        <a class="regular-customer-link" href="">
+                            <svg class="regular-customer-icon">
+                                <use href="./images/sprite.svg#icon-company2-svg"></use>
+                            </svg>
+                        </a>
+                    </li>
+
+                    <li class="regular-customer-item">
+                        <a class="regular-customer-link" href="">
+                            <svg class="regular-customer-icon">
+                                <use href="./images/sprite.svg#icon-company3-svg"></use>
+                            </svg>
+                        </a>
+                    </li>
+
+                    <li class="regular-customer-item">
+                        <a class="regular-customer-link" href="">
+                            <svg class="regular-customer-icon">
+                                <use href="./images/sprite.svg#icon-company4-svg"></use>
+                            </svg>
+                        </a>
+                    </li>
+
+                    <li class="regular-customer-item">
+                        <a class="regular-customer-link" href="">
+                            <svg class="regular-customer-icon">
+                                <use href="./images/sprite.svg#icon-company5-svg"></use>
+                            </svg>
+                        </a>
+                    </li>
+
+                    <li class="regular-customer-item">
+                        <a class="regular-customer-link" href="">
+                            <svg class="regular-customer-icon">
+                                <use href="./images/sprite.svg#icon-company6-svg"></use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
             </div>
