--- a/index.html
+++ b/index.html
@@ -29,8 +29,17 @@
                 </nav>
             </div>
             <div class="info-header link">
-                <a class="header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
+                <a class="header-contact" href="mailto:info@devstudio.com">
+                    <svg class="header-contacts-icon">
+                        <use href="./images/sprite.svg#icon-mail-svg"></use>
+                    </svg>
+                    info@devstudio.com</a>
+                <a class="header-contact" href="tel:+380961111111">
+                    <svg class="header-contacts-icon">
+                        <use href="./images/sprite.svg#icon-smartphone-svg"></use>
+                    </svg>
+                    +38 096 111 11 11
+                </a>
             </div>
         </div>
     </header>    
@@ -47,6 +56,11 @@
             <div class="container">
                 <ul class="our-advantages list">
                     <li class="advantages">
+                        <div class="our-advantages-item">
+                            <svg class="our-advantages-icon">
+                                <use href="./images/sprite.svg#icon-antena-svg"></use>
+                            </svg>
+                        </div>
                         <h3 class="h3-advantages">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
                         <p class="p-advantages">
                             Идейные соображения, а также
@@ -55,6 +69,11 @@
                         </p>
                     </li>
                     <li class="advantages">
+                        <div class="our-advantages-item">
+                            <svg class="our-advantages-icon">
+                                <use href="./images/sprite.svg#icon-clock-svg"></use>
+                            </svg>
+                        </div>
                         <h3 class="h3-advantages">ПУНКТУАЛЬНОСТЬ</h3>
                         <p class="p-advantages">
                             Задача организации, в особенности
@@ -63,6 +82,11 @@
                         </p>
                     </li>
                     <li class="advantages">
+                        <div class="our-advantages-item">
+                            <svg class="our-advantages-icon">
+                                <use href="./images/sprite.svg#icon-plan-svg"></use>
+                            </svg>
+                        </div>
                         <h3 class="h3-advantages">ПЛАНИРОВАНИЕ</h3>
                         <p class="p-advantages">
                             Равным образом консультация с
@@ -71,6 +95,11 @@
                         </p>
                     </li>
                     <li class="advantages">
+                        <div class="our-advantages-item">
+                            <svg class="our-advantages-icon">
+                                <use href="./images/sprite.svg#icon-astronaut-svg"></use>
+                            </svg>
+                        </div>
                         <h3 class="h3-advantages">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
                         <p class="p-advantages">
                             Значимость этих проблем настолько
@@ -109,28 +138,28 @@
                         <ul class="social-list list">
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                    <svg class="social-list-icon">
+                                    <svg class="social-list-icon our-team-social-list-icon-color">
                                         <use href="./images/sprite.svg#icon-instagram-svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                    <svg class="social-list-icon">
+                                    <svg class="social-list-icon our-team-social-list-icon-color">
                                         <use href="./images/sprite.svg#icon-twitter-svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                    <svg class="social-list-icon">
+                                    <svg class="social-list-icon our-team-social-list-icon-color">
                                         <use href="./images/sprite.svg#icon-facebook-svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                    <svg class="social-list-icon">
+                                    <svg class="social-list-icon our-team-social-list-icon-color">
                                         <use href="./images/sprite.svg#icon-linkedin-svg"></use>
                                     </svg>
                                 </a>
@@ -148,28 +177,28 @@
                         <ul class="social-list list">
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                    <svg class="social-list-icon">
+                                    <svg class="social-list-icon our-team-social-list-icon-color">
                                         <use href="./images/sprite.svg#icon-instagram-svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                    <svg class="social-list-icon">
+                                    <svg class="social-list-icon our-team-social-list-icon-color">
                                         <use href="./images/sprite.svg#icon-twitter-svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                    <svg class="social-list-icon">
+                                    <svg class="social-list-icon our-team-social-list-icon-color">
                                         <use href="./images/sprite.svg#icon-facebook-svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                    <svg class="social-list-icon">
+                                    <svg class="social-list-icon our-team-social-list-icon-color">
                                         <use href="./images/sprite.svg#icon-linkedin-svg"></use>
                                     </svg>
                                 </a>
@@ -187,28 +216,28 @@
                         <ul class="social-list list">
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                    <svg class="social-list-icon">
+                                    <svg class="social-list-icon our-team-social-list-icon-color">
                                         <use href="./images/sprite.svg#icon-instagram-svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                    <svg class="social-list-icon">
+                                    <svg class="social-list-icon our-team-social-list-icon-color">
                                         <use href="./images/sprite.svg#icon-twitter-svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                    <svg class="social-list-icon">
+                                    <svg class="social-list-icon our-team-social-list-icon-color">
                                         <use href="./images/sprite.svg#icon-facebook-svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                    <svg class="social-list-icon">
+                                    <svg class="social-list-icon our-team-social-list-icon-color">
                                         <use href="./images/sprite.svg#icon-linkedin-svg"></use>
                                     </svg>
                                 </a>
@@ -226,28 +255,28 @@
                         <ul class="social-list list">
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                    <svg class="social-list-icon">
+                                    <svg class="social-list-icon our-team-social-list-icon-color">
                                         <use href="./images/sprite.svg#icon-instagram-svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                    <svg class="social-list-icon">
+                                    <svg class="social-list-icon our-team-social-list-icon-color">
                                         <use href="./images/sprite.svg#icon-twitter-svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                    <svg class="social-list-icon">
+                                    <svg class="social-list-icon our-team-social-list-icon-color">
                                         <use href="./images/sprite.svg#icon-facebook-svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                    <svg class="social-list-icon">
+                                    <svg class="social-list-icon our-team-social-list-icon-color">
                                         <use href="./images/sprite.svg#icon-linkedin-svg"></use>
                                     </svg>
                                 </a>
@@ -315,16 +344,50 @@
     </main>
 
     <footer class="footer">
-        <div class="footer-container container link">
-            <a class="logo-footer" href="index.html">
-                <span class="logo-web">Web</span><span class="studio-footer">Studio</span>
-            </a>
-
-            <address>
-                <p>г. Киев, пр-т Леси Украинки, 26</p>
-                <a class="mail-footer" href="mailto:info@example.com">info@example.com</a><br>
-                <a class="tel-footer" href="tel:+3809911111">+38 099 111 11 11</a>
-            </address>
+        <div class="container footer-container">
+            <div class="link footer-adress-container">
+                <a class="logo-footer" href="index.html">
+                    <span class="logo-web">Web</span><span class="studio-footer">Studio</span>
+                </a>
+                <address>
+                    <p>г. Киев, пр-т Леси Украинки, 26</p>
+                    <a class="mail-footer" href="mailto:info@example.com">info@example.com</a><br>
+                    <a class="tel-footer" href="tel:+3809911111">+38 099 111 11 11</a>
+                </address>
+            </div>
+            <div class="footer-join-container">
+                <h3 class="footer-join-h3">ПРИСОЕДИНЯЙТЕСЬ</h3>
+                <ul class="footer-social-links-items list">
+                    <li class="social-list-item">
+                        <a href="" class="social-list-link join-us-social-list-link-bg">
+                            <svg class="social-list-icon join-us-social-list-icon-color">
+                                <use href="./images/sprite.svg#icon-instagram-svg"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-list-item">
+                        <a href="" class="social-list-link join-us-social-list-link-bg">
+                            <svg class="social-list-icon join-us-social-list-icon-color">
+                                <use href="./images/sprite.svg#icon-twitter-svg"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-list-item">
+                        <a href="" class="social-list-link join-us-social-list-link-bg">
+                            <svg class="social-list-icon join-us-social-list-icon-color">
+                                <use href="./images/sprite.svg#icon-facebook-svg"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-list-item">
+                        <a href="" class="social-list-link join-us-social-list-link-bg">
+                            <svg class="social-list-icon join-us-social-list-icon-color">
+                                <use href="./images/sprite.svg#icon-linkedin-svg"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
