--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -15,8 +15,6 @@
 </head>
 <body>
 
-
-
     <header class="header">
         <div class="container link header-container">
             <div class="logo-nav">
@@ -32,13 +30,20 @@
                 </nav>
             </div>
             <div class="info-header link">
-                <a class="header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
+                <a class="header-contact" href="mailto:info@devstudio.com">
+                    <svg class="header-contacts-icon">
+                        <use href="./images/sprite.svg#icon-mail-svg"></use>
+                    </svg>
+                    info@devstudio.com</a>
+                <a class="header-contact" href="tel:+380961111111">
+                    <svg class="header-contacts-icon">
+                        <use href="./images/sprite.svg#icon-smartphone-svg"></use>
+                    </svg>
+                    +38 096 111 11 11
+                </a>
             </div>
         </div>
     </header>
-
-
 
     <main>
         <section class="main-section section">
@@ -173,19 +178,53 @@
             </div>
         </section>
     </main>
-    
-    <footer class="footer">
-        <div class="footer-container container link">
-            <a class="logo-footer" href="index.html">
-                <span class="logo-web">Web</span><span class="studio-footer">Studio</span>
-            </a>
-    
-            <address>
-                <p>г. Киев, пр-т Леси Украинки, 26</p>
-                <a class="mail-footer" href="mailto:info@example.com">info@example.com</a><br>
-                <a class="tel-footer" href="tel:+3809911111">+38 099 111 11 11</a>
-            </address>
-        </div>
-    </footer>
+
+        <footer class="footer">
+            <div class="container footer-container">
+                <div class="link footer-adress-container">
+                    <a class="logo-footer" href="index.html">
+                        <span class="logo-web">Web</span><span class="studio-footer">Studio</span>
+                    </a>
+                    <address>
+                        <p>г. Киев, пр-т Леси Украинки, 26</p>
+                        <a class="mail-footer" href="mailto:info@example.com">info@example.com</a><br>
+                        <a class="tel-footer" href="tel:+3809911111">+38 099 111 11 11</a>
+                    </address>
+                </div>
+                <div class="footer-join-container">
+                    <h3 class="footer-join-h3">ПРИСОЕДИНЯЙТЕСЬ</h3>
+                    <ul class="footer-social-links-items list">
+                        <li class="social-list-item">
+                            <a href="" class="social-list-link join-us-social-list-link-bg">
+                                <svg class="social-list-icon join-us-social-list-icon-color">
+                                    <use href="./images/sprite.svg#icon-instagram-svg"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-list-item">
+                            <a href="" class="social-list-link join-us-social-list-link-bg">
+                                <svg class="social-list-icon join-us-social-list-icon-color">
+                                    <use href="./images/sprite.svg#icon-twitter-svg"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-list-item">
+                            <a href="" class="social-list-link join-us-social-list-link-bg">
+                                <svg class="social-list-icon join-us-social-list-icon-color">
+                                    <use href="./images/sprite.svg#icon-facebook-svg"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-list-item">
+                            <a href="" class="social-list-link join-us-social-list-link-bg">
+                                <svg class="social-list-icon join-us-social-list-icon-color">
+                                    <use href="./images/sprite.svg#icon-linkedin-svg"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
 </body>
 </html>
